crates/molar_molfile/src/molfile_bindings.rs

            v: *mut molfile_volumetric_readwrite_t,
        ) -> ::std::os::raw::c_int,
    >,
    #[doc = " Read in Angles, Dihedrals, Impropers, and Cross Terms and optionally types.\n (Cross terms pertain to the CHARMM/NAMD CMAP feature)"]
    pub read_angles: ::std::option::Option<
        unsafe extern "C" fn(
            handle: *mut ::std::os::raw::c_void,
            numangles: *mut ::std::os::raw::c_int,
            angles: *mut *mut ::std::os::raw::c_int,
            angletypes: *mut *mut ::std::os::raw::c_int,
            numangletypes: *mut ::std::os::raw::c_int,
            angletypenames: *mut *mut *mut ::std::os::raw::c_char,
            numdihedrals: *mut ::std::os::raw::c_int,
            dihedrals: *mut *mut ::std::os::raw::c_int,
            dihedraltypes: *mut *mut ::std::os::raw::c_int,
            numdihedraltypes: *mut ::std::os::raw::c_int,
            dihedraltypenames: *mut *mut *mut ::std::os::raw::c_char,
            numimpropers: *mut ::std::os::raw::c_int,
            impropers: *mut *mut ::std::os::raw::c_int,
            impropertypes: *mut *mut ::std::os::raw::c_int,
            numimpropertypes: *mut ::std::os::raw::c_int,
            impropertypenames: *mut *mut *mut ::std::os::raw::c_char,
            numcterms: *mut ::std::os::raw::c_int,
            cterms: *mut *mut ::std::os::raw::c_int,
            ctermcols: *mut ::std::os::raw::c_int,
            ctermrows: *mut ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
    #[doc = " Write out Angles, Dihedrals, Impropers, and Cross Terms\n (Cross terms pertain to the CHARMM/NAMD CMAP feature)"]
    pub write_angles: ::std::option::Option<
        unsafe extern "C" fn(
            handle: *mut ::std::os::raw::c_void,
            numangles: ::std::os::raw::c_int,
            angles: *const ::std::os::raw::c_int,
            angletypes: *const ::std::os::raw::c_int,
            numangletypes: ::std::os::raw::c_int,
            angletypenames: *mut *const ::std::os::raw::c_char,
            numdihedrals: ::std::os::raw::c_int,
            dihedrals: *const ::std::os::raw::c_int,
            dihedraltypes: *const ::std::os::raw::c_int,
            numdihedraltypes: ::std::os::raw::c_int,
            dihedraltypenames: *mut *const ::std::os::raw::c_char,
            numimpropers: ::std::os::raw::c_int,
            impropers: *const ::std::os::raw::c_int,
            impropertypes: *const ::std::os::raw::c_int,
            numimpropertypes: ::std::os::raw::c_int,
            impropertypenames: *mut *const ::std::os::raw::c_char,
            numcterms: ::std::os::raw::c_int,
            cterms: *const ::std::os::raw::c_int,
            ctermcols: ::std::os::raw::c_int,
            ctermrows: ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
    #[doc = " Retrieve metadata pertaining to timestep independent\n QM datasets in this file.\n\n The metadata are the sizes of the QM related data structure\n arrays that will be populated by the plugin when\n read_qm_rundata() is called. Since the allocation of these\n arrays is done by VMD rather than the plugin, VMD needs to\n know the sizes beforehand. Consequently read_qm_metadata()\n has to be called before read_qm_rundata()."]
    pub read_qm_metadata: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::std::os::raw::c_void,
            metadata: *mut molfile_qm_metadata_t,
        ) -> ::std::os::raw::c_int,
    >,
    #[doc = " Read timestep independent QM data.\n\n Typical data that are defined only once per trajectory are\n general info about the calculation (such as the used method),\n the basis set and normal modes.\n The data structures to be populated must have been allocated\n before by VMD according to sizes obtained through\n read_qm_metadata()."]
    pub read_qm_rundata: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::std::os::raw::c_void,
            qmdata: *mut molfile_qm_t,
        ) -> ::std::os::raw::c_int,
    >,
    pub read_timestep_pagealign_size: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::std::os::raw::c_void,
            pagealignsize: *mut ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
    #[doc = " Read the next timestep from the file.  Return MOLFILE_SUCCESS, or\n MOLFILE_EOF on EOF.  If the molfile_timestep_t or molfile_qm_metadata_t\n arguments are NULL, then the coordinate or qm data should be skipped.\n Otherwise, the application must prepare molfile_timestep_t and\n molfile_qm_timestep_t by allocating space for the corresponding\n number of coordinates, orbital wavefunction coefficients, etc.\n Since it is common for users to want to load only the final timestep\n data from a QM run, the application may provide any combination of\n valid, or NULL pointers for the molfile_timestep_t and\n molfile_qm_timestep_t parameters, depending on what information the\n user is interested in.\n The natoms and qm metadata parameters exist because some file formats\n cannot determine for themselves how many atoms etc are in a\n timestep; the app must therefore obtain this information elsewhere\n and provide it to the plugin."]
    pub read_timestep: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::std::os::raw::c_void,
            natoms: ::std::os::raw::c_int,
            arg2: *mut molfile_timestep_t,
            arg3: *mut molfile_qm_metadata_t,
            arg4: *mut molfile_qm_timestep_t,
        ) -> ::std::os::raw::c_int,
    >,
    pub read_timestep_metadata: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::std::os::raw::c_void,
            arg2: *mut molfile_timestep_metadata_t,
        ) -> ::std::os::raw::c_int,
    >,
    pub read_qm_timestep_metadata: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::std::os::raw::c_void,
            arg2: *mut molfile_qm_timestep_metadata_t,
        ) -> ::std::os::raw::c_int,
    >,
    #[doc = "  Console output, READ-ONLY function pointer.\n  Function pointer that plugins can use for printing to the host\n  application's text console.  This provides a clean way for plugins\n  to send message strings back to the calling application, giving the\n  caller the ability to prioritize, buffer, and redirect console messages\n  to an appropriate output channel, window, etc.  This enables the use of\n  graphical consoles like TkCon without losing console output from plugins.\n  If the function pointer is NULL, no console output service is provided\n  by the calling application, and the output should default to stdout\n  stream.  If the function pointer is non-NULL, all output will be\n  subsequently dealt with by the calling application.\n\n  XXX this should really be put into a separate block of\n      application-provided read-only function pointers for any\n      application-provided services"]
    pub cons_fputs: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: ::std::os::raw::c_int,
            arg2: *const ::std::os::raw::c_char,
        ) -> ::std::os::raw::c_int,
    >,
}
extern "C" {
    pub fn pdb_get_plugin_ptr() -> *mut molfile_plugin_t;
}
extern "C" {
    pub fn xyz_get_plugin_ptr() -> *mut molfile_plugin_t;
}
extern "C" {
    pub fn dcd_get_plugin_ptr() -> *mut molfile_plugin_t;
}
